--- a/app/about.html
+++ b/app/about.html
@@ -24,19 +24,19 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a>Menu +</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu&mdash;</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns large-12 small-padding">
+      <div class="columns large-12">
         <h1>About</h1>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns large-12 medium-padding">
-        <h3>Albatross Digital is an independent design and development company. We build websites, design identities and solve problems for organizations, institutions and entrepreneurs.</h3>
+      <div class="columns large-12">
+        <h2>Design &amp; Development</h2>
       </div>
     </div>
 
@@ -67,17 +67,15 @@
       <div class="columns medium-12 large-6">
         
         <div class="row">
-          <div class="columns medium-8 large-6 small-padding">
-            <h4>Approach</h4>
+          <div class="columns medium-8 large-6">
+            <h3>Profile</h3>
           </div>
         </div>
 
         <div class="row">
           <div class="columns large-12 medium-padding">
-            <h2>&mdash;Create Clarity</h2>
-            <h2>&mdash;Design Systems</h2>
-            <h2>&mdash;Build for All</h2>
-            <h2>&mdash;Always Learn</h2>
+            <p>Albatross Digital is an independent design and development company. We build websites, design visual identities and solve problems for clients big and small. Since 2009, we have been helping organizations, institutions and entrepreneurs achieve their visions through design and technology. Our work creates clarity, improves efficiency and drives action for our clients and partners. Our best work has come from collaborating with passionate clients who seek memorable and innovative solutions.</p>
+
           </div>
         </div>
 
@@ -86,8 +84,8 @@
       <div class="columns medium-12 large-6 medium-padding">
       
         <div class="row">
-          <div class="columns large-12 small-padding">
-            <h4>Disciplines</h4>
+          <div class="columns large-12">
+            <h3>Capabilities</h3>
           </div>
         </div>
 
@@ -124,8 +122,8 @@
       <div class="columns large-12">
 
         <div class="row">
-          <div class="columns large-12 small-padding">
-            <h4>Team</h4>
+          <div class="columns large-12">
+            <h3>Team</h3>
           </div>
         </div>
 
@@ -139,7 +137,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Kevin Herman</a></h3>
                   <h5>Business Director</h5>
-                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p>&mdash;Ensures all needs and objectives are met while navigating projects to completion</p>
                 </div>
               </div>
             </div>
@@ -153,7 +151,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Jeff Lyon</a></h3>
                   <h5>Developer</h5>
-                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p>&mdash;Finds elegant solutions to complex functionality, workflow, and server architecture challenges</p>
                 </div>
               </div>
             </div>
@@ -170,7 +168,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
-                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting concepts that build affection</p>
                 </div>
               </div>
             </div>
@@ -184,7 +182,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Alex Schmoe</a></h3>
                   <h5>Developer</h5>
-                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p>&mdash;Bridges design and development while constantly acquiring new skills for practical digital application</p>
                 </div>
               </div>
             </div>
@@ -199,18 +197,19 @@
 
         <div class="row">
           <div class="columns large-12 small-padding">
-            <h4>Namesake</h4>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-6 small-padding">
             <img src="images/tross1.jpg">
-            <h5 class="caption-small">Photo by <a href="https://www.flickr.com/photos/seabirdnz/10372922925/in/set-72157636739223795">seabirdnz</a></h5>
+            <h5 class="caption-small"><a href="https://www.flickr.com/photos/seabirdnz/10372922925/in/set-72157636739223795">&mdash;seabirdnz</a></h5>
           </div>
-          <div class="columns large-6">
-            <p>&ldquo;An albatross is the grandest living flying machine on Earth. An albatross is bone, feathers, muscle, and the wind... Wielding the longest wings in nature&mdash;up to eleven and a half feet (3.5 meters)&mdash;albatrosses can glide hundreds of miles without flapping, crossing ocean basins, circumnavigating the globe.&rdquo;
-            <p>&ndash; Carl Safina, <i><a>On the Wings of the Albatross</a></i></p>
+          <div class="columns large-12">
+            <div class="row">
+              <div class="columns small-1 large-1">
+                <h1 class="quote-mark">&ldquo;</h1>
+              </div>
+              <div class="columns small-11 large-11">
+                <h3 class="quote">An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
+                <h5>&mdash;Carl Safina, National Geographic</h5>
+              </div>
+            </div>
           </div>
         </div>
       </div>
