--- a/app/index.html
+++ b/app/index.html
@@ -24,13 +24,13 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a>Menu +</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu +</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns large-12">
-        <h1 class="wordmark"><a>Albatross Digital</a></h1>
+        <h1 class="wordmark">Albatross Digital</h1>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
 
         <div class="row">
           <div class="columns large-12">
-            <div class="note-teaser">
+            <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
                   <h3><a>Projects</a></h3>
@@ -58,7 +58,7 @@
 
         <div class="row">
           <div class="columns large-12">
-            <div class="note-teaser">
+            <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
                   <h3><a>About</a></h3>
@@ -73,7 +73,7 @@
 
         <div class="row">
           <div class="columns large-12">
-            <div class="note-teaser">
+            <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
                   <h3><a>Notes</a></h3>
@@ -85,7 +85,7 @@
 
         <div class="row">
           <div class="columns large-12">
-            <div class="note-teaser">
+            <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
                   <h3><a>Contact</a></h3>
@@ -96,6 +96,8 @@
         </div>
       </div>
     </div>
+
+
 
 
 
