--- a/app/note.html
+++ b/app/note.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-6 large-6">
-        <h3 class="right menu"><a>Menu +</a></h3>
+        <h3 class="right menu"><a>Menu&ndash;</a></h3>
       </div>
     </div>
     
@@ -42,25 +42,15 @@
         </div>
     </div>
 
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma1.jpg">
-      </div>
-    </div>
-
     <div class="row">
         <div class="columns large-12 medium-padding">
-            <p>Flight is our turnkey Drupal Distribution. It aims to take care of the mundane and frustrating tasks in every site build: downloading modules, setting up standard content types, configuring media, and creating a subtheme. It is for developers and site builders, but we have plans to create beatiful, flexible subthemes for everyone in the near future.</p>
+            <p> Flight is our turnkey Drupal Distribution. It aims to take care of the mundane and frustrating tasks in every site build: downloading modules, setting up standard content types, configuring media, and creating a subtheme. It is for developers and site builders, but we have plans to create beatiful, flexible subthemes for everyone in the near future.</p>
             <h3>Completely open-source</h3>
             <p>That doesn't just mean code.  We have open-sourced our entire development workflow, including a Drupal Planning Document, inspired by Larry Garfield's blog post.  We have also open-sourced standard documentation, including short screencasts, with contextual help links links scattered throughout the administrative interface.  Good training is essential to any successful Content Management System implementation. Now your content administrators will be able to go back and find the part they missed when they were dosing off during training.</p>
             
             <div class="row">
-                <div class="columns medium-6 large-6 medium-padding">
+                <div class="columns medium-6 large-12 medium-padding">
                     <img src="images/uva7.jpg">
-                </div>
-                <div class="columns medium-6 large-6 medium-padding">
-                    <img src="images/uva1.jpg">
                 </div>
             </div>
 
@@ -78,7 +68,7 @@
         </div>
     </div>
 
-    <div class="row large-padding">
+    <div class="row xl-padding">
         <div class="columns medium-12 large-6 end">
             <div class="row">
               <div class="columns small-12 medium-3 large-4">
@@ -103,12 +93,12 @@
             </div>
         </div>
 
+
         <div class="row">
           <div class="columns small-12 medium-6 large-6">
             <div class="note-teaser">
                 <div class="row">
                     <div class="columns large-10 end">
-                        <h5>Related<h5>
                         <h3><a>Flight for Libraries</a></h3>
                         <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.</p>
                     </div>
@@ -120,7 +110,6 @@
             <div class="note-teaser">
                 <div class="row">
                     <div class="columns large-10 end">
-                        <h5>Related<h5>
                         <h3><a>Drupal 8, Rest APIs, Angular, and a New Wesbite in 3 days</a></h3>
                         <p>With Drupalcon fast approaching, we had an oh s**t moment and realized it was time to make our website.  Here's how we made it happen in Drupal 8 with Angular.js. Along the way we got a good impression of Drupal 8 alpha 12, messed around with some fun ui chaos and had some fun. Here we go.</p>
                     </div>
