--- a/app/page.html
+++ b/app/page.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo-uva.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a>Menu +</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu&mdash;</a></h3>
       </div>
     </div>
 
@@ -41,21 +41,31 @@
       </div>
     </div>
          
-    <div class="row small-padding">
-      <div class="columns large-12">
-        <p>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</p>
-      </div>
-    </div>
 
     <div class="row">
       <div class="columns medium-6 large-6 medium-padding">
         <img src="images/uva7.jpg">
       </div>
       <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/uva2.jpg">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/uva3.jpg">
+      </div>
+      <div class="columns medium-6 large-6 medium-padding">
         <img src="images/uva1.jpg">
       </div>
     </div>
 
+    <div class="row">
+      <div class="columns large-12">
+        <h3>Challenge</h3>
+        <p>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</p>
+      </div>
+    </div>
     
 
     <div class="row">
@@ -65,37 +75,26 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/uva2.jpg">
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/uva3.jpg">
-      </div>
-    </div>
-
-
-    <div class="row large-padding">
+    <div class="row xl-padding">
       <div class="columns medium-12 large-6">
-
-        <div class="row">
-          <div class="columns small-12 medium-3 large-4">
-            <h5>Credits</h5>
-          </div>
-          <div class="columns small-12 medium-9 large-8">
-            <p>Agency: <a>IFSight</a><br>Photography: <a>Walter Ioss</a></p>
-          </div>
-        </div>
 
         <div class="row">
           <div class="columns small-12 medium-3 large-4">
             <h5>Tags</h5>
           </div>
           <div class="columns small-12 medium-9 large-8">
-            <p><a>Commerce</a></p>
+            <p><a>Maps</a>, <a>CMS</a></p>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="columns small-12 medium-3 large-4">
+            <h5>Credits</h5>
+          </div>
+          <div class="columns small-12 medium-9 large-8">
+            <p>Agency&mdash;<a>IFSight</a><br>Photography&mdash;<a>Walter Ioss</a></p>
           </div>
         </div>
 
