--- a/app/tacoma.html
+++ b/app/tacoma.html
@@ -41,21 +41,34 @@
         <h2>The Ease of Doing Business</h2>
       </div>
     </div>
-    
 
     <div class="row">
-      <div class="columns large-12 small-padding">
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/tacoma6.png">
+        <h5 class="caption-small">&mdash;Typography</h5>
+      </div>
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/tacoma7.png">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/tacoma2.png">
+      </div>
+      <div class="columns medium-6 large-6 medium-padding">
+        <img class="caption-img"src="images/tacoma1.jpg">
+        <h5 class="caption-small"><a>&mdash;Ben Martin</a></h5>
+      </div>
+    </div>
+
+    
+     <div class="row">
+      <div class="columns large-12">
+         <h3>Background</h3>
          <p>The Port of Tacoma is the third-largest port on the West Coast of the United States, and growing quickly. We were brought in to redesign the entire site and develop a host of interactive features to showcase Tacoma's many strategic advantages.</p>
       </div>
     </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma1.jpg">
-        <h5 class="caption-small">Photo by <a>seabirdnz</a></h5>
-      </div>
-    </div>
- 
 
 
      <div class="row">
@@ -66,33 +79,6 @@
         <p>Our strategy was to integrate a host of user-focused features such as searchable databases, interactive maps, and carrier feeds into an elegant, responsive Drupal theme. We identified early on that the Ports' advantages were centered around Shipping, Real Estate, and Community. Anchored by large images and a strong font selection, we designed a system of content to better frame the wealth of information about the Port.</p>
         <h3>Results</h3>
         <p>With a variety of interactive features and a refreshed, responsive design, bounce rates were lowered and mobile traffic as well as overall length of visit were significantly increased. The Port's constituents and customers are now accessing new information, even in transit.</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns medium-6 large-6 medium-padding">
-        <img src="images/tacoma6.png">
-      </div>
-      <div class="columns medium-6 large-6 medium-padding">
-        <img src="images/tacoma7.png">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma2.png">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma4.png">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma5.png">
       </div>
     </div>
 
