--- a/app/notes.html
+++ b/app/notes.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a>Menu +</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu +</a></h3>
       </div>
     </div>
 
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="row medium-padding">
+    <div class="row xl-padding">
       <div class="columns medium-6 large-6">
 
         <div class="row">
@@ -65,6 +65,33 @@
                   <img class="small-padding" src="images/balt-thumb.png">
                   <h3><a>Flight for Libraries</a></h3>
                   <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
+                  <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <img class="small-padding" src="images/uva7.jpg">
+                  <h3><a>Rebranding Albatross Digital</a></h3>
+                  <p>Our designer, Shawn had been throwing around ideas for a new portfolio for quite some time.  What we ended up with was a clean design centered on our porfolio, with carefully created image for each entry.</p>
                 </div>
               </div>
             </div>
@@ -141,14 +168,45 @@
             </div>
           </div>
         </div>
+
+         <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <img class="small-padding" src="images/uva7.jpg">
+                  <h3><a>Drupal 8, Rest APIs, Angular, and a New Wesbite in 3 days</a></h3>
+                  <p>With Drupalcon fast approaching, we had an oh s**t moment and realized it was time to make our website.  Here's how we made it happen in Drupal 8 with Angular.js. Along the way we got a good impression of Drupal 8 alpha 12, messed around with some fun ui chaos and had some fun. Here we go.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
+                  <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
 
     <div class="row">
-      <div class="columns large-11 end medium-padding">
-          <h3><a>More Notes +</a></h3>
-      </div>
+        <div class="columns large-6">
+            <div class="all-teaser">
+                <h3><a>More Notes +</a></h3>
+            </div>
+        </div>
     </div>
 
 
