--- a/app/styleguide.html
+++ b/app/styleguide.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     
-    <div class="row">
+    <div class="row xl-padding">
       <div class="columns large-12">
         <h1>Style Guide <small>h1</small></h1>
         <h2>Albatross Digital is an independent design and development company <small>h2</small></h2>
@@ -40,6 +40,22 @@
         <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules, setting up standard content types, configuring media, and creating a subtheme. It is for developers and site builders, but we have plans to create beatiful, flexible subthemes for everyone in the near future. <small>p</small></p>
       </div>
     </div>
+
+    <div class="row">
+        <div class="columns large-12">
+            <div class="row">
+              <div class="columns small-1 large-1">
+                <h1 class="quote-mark">&ldquo;</h1>
+              </div>
+              <div class="columns small-11 large-11">
+                <h3 class="quote">An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</h3>
+                <h5>&mdash;Carl Safina, National Geographic</h5>
+              </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
     
