fixed menu button

--- a/app/about.html
+++ b/app/about.html
@@ -24,7 +24,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a href="/menu.html">Menu&mdash;</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu +</a></h3>
       </div>
     </div>
 
@@ -196,7 +196,7 @@
       <div class="columns large-12">
 
         <div class="row">
-          <div class="columns large-12 small-padding">
+          <div class="columns large-12">
             <img src="images/tross1.jpg">
             <h5 class="caption-small"><a href="https://www.flickr.com/photos/seabirdnz/10372922925/in/set-72157636739223795">&mdash;seabirdnz</a></h5>
           </div>
@@ -206,7 +206,7 @@
                 <h1 class="quote-mark">&ldquo;</h1>
               </div>
               <div class="columns small-11 large-11">
-                <h3 class="quote">An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
+                <h3 class="quote"><a>An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
                 <h5>&mdash;Carl Safina, National Geographic</h5>
               </div>
             </div>
