--- a/app/note.html
+++ b/app/note.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-6 large-6">
-        <h3 class="right menu"><a>Menu&ndash;</a></h3>
+        <h3 class="right menu"><a>Menu +</a></h3>
       </div>
     </div>
     
