--- a/app/page.html
+++ b/app/page.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo-uva.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a href="/menu.html">Menu&mdash;</a></h3>
+        <h3 class="right menu"><a href="/menu.html">Menu +</a></h3>
       </div>
     </div>
 
