changing some text

--- a/app/about.html
+++ b/app/about.html
@@ -74,7 +74,7 @@
 
         <div class="row">
           <div class="columns large-12 medium-padding">
-            <p>Albatross Digital is an independent design and development company. We build websites, design visual identities and solve problems for clients big and small. Since 2009, we have been helping organizations, institutions and entrepreneurs achieve their visions through design and technology. Our work creates clarity, improves efficiency and drives action for our clients and partners. Our best work has come from collaborating with passionate clients who seek memorable and innovative solutions.</p>
+            <p>Albatross Digital is an independent design and development company. We build websites, design identities and solve problems for clients big and small. Since 2009 we have been helping organizations, institutions and entrepreneurs achieve their visions through design and technology. Our best work has come from collaborating with passionate clients who seek memorable and innovative solutions.</p>
 
           </div>
         </div>
@@ -168,7 +168,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
-                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting concepts that build affection</p>
+                  <p>&mdash;Executes design systems, champions simplicity, and pursues lasting concepts that create affection</p>
                 </div>
               </div>
             </div>
