--- a/app/about.html
+++ b/app/about.html
@@ -36,7 +36,7 @@
 
     <div class="row">
       <div class="columns large-12">
-        <h2>Design &amp; Development</h2>
+        <h2>We build websites, design identities and solve problems</h2>
       </div>
     </div>
 
@@ -74,8 +74,7 @@
 
         <div class="row">
           <div class="columns large-12 medium-padding">
-            <p>Albatross Digital is an independent design and development company. We build websites, design identities and solve problems for clients big and small. Since 2009 we have been helping organizations, institutions and entrepreneurs achieve their visions through design and technology. Our best work has come from collaborating with passionate clients who seek memorable and innovative solutions.</p>
-
+            <p>Albatross Digital is an independent design and development company. We use technology to help leading organizations, institutions and entrepreneurs achieve their visions. Our diverse, dedicated team works directly with all clients to ensure tight communication and attention to detail. Our best work occurs when we collaborate with passionate people who seek memorable and innovative results.</p>
           </div>
         </div>
 
@@ -168,7 +167,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
-                  <p>&mdash;Executes design systems, champions simplicity, and pursues lasting concepts that create affection</p>
+                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting communication concepts</p>
                 </div>
               </div>
             </div>
@@ -207,7 +206,7 @@
               </div>
               <div class="columns small-11 large-11">
                 <h3 class="quote"><a>An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
-                <h5>&mdash;Carl Safina, National Geographic</h5>
+                <h5>&mdash;Carl Safina, <a>National Geographic</a></h5>
               </div>
             </div>
           </div>
