--- a/app/menu.html
+++ b/app/menu.html
@@ -20,36 +20,24 @@
   <body class="full-bg">
 
     <div class="row">
-      <div class="columns small-4 large-6">
+      <div class="columns small-4 large-6 transparent-logo">
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu"><a href="/menu.html">Menu +</a></h3>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12">
-        <h1 class="wordmark">Albatross Digital</h1>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <h2>Design &amp; Development</h2>
+        <h3 class="right menu"><a>Close&mdash;</a></h3>
       </div>
     </div>
 
 
     <div class="row medium-padding">
-      <div class="columns medium-6 large-6">
+      <div class="columns small-offset-2 small-10 medium-offset-6 medium-6 large-offset-8 large-4">
 
         <div class="row">
           <div class="columns large-12">
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
-                  <h3><a>Projects</a></h3>
+                  <h3><a href="/projects.html">Projects</a></h3>
                 </div>
               </div>
             </div>
@@ -61,104 +49,47 @@
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a>About</a></h3>
+                  <h3><a href="/About.html">About</a></h3>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="columns medium-6 large-6">
 
         <div class="row">
           <div class="columns large-12">
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
-                  <h3><a>Notes</a></h3>
+                  <h3><a href="/notes.html">Notes</a></h3>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row xl-padding">
           <div class="columns large-12">
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a>Contact</a></h3>
+                  <h3><a href="/contact.html">Contact</a></h3>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="row footer">
+
+          <div class="columns small-12 large-12">
+            <p><a>(917) 873 4666</a><br><a>hello@albatrossdigital.com</a></p>
           </div>
         </div>
       </div>
     </div>
 
-
-
-
-
-
-
-    <!-- menu
-    <div class="row medium-padding">
-      <div class="columns medium-6 large-6">
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>Projects</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>Notes</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-       <div class="columns medium-6 large-6">
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>About</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>Contact</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    
         
 
 
