final push from design

--- a/app/about.html
+++ b/app/about.html
@@ -167,7 +167,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
-                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting communication concepts</p>
+                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting concepts that build affection</p>
                 </div>
               </div>
             </div>
