--- a/app/page.html
+++ b/app/page.html
@@ -40,7 +40,28 @@
         <h2>100 Years of Excellence</h2>
       </div>
     </div>
+
+    <div class="row">
+      <div class="columns medium-12 large-12 medium-padding">
+        <img src="images/tacoma1.png">
+      </div>
+    </div>
          
+
+    <div class="row">
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/uva7.jpg">
+      </div>
+      <div class="columns medium-6 large-6 medium-padding">
+        <img src="images/uva2.jpg">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="columns medium-12 large-12 medium-padding">
+        <img src="images/tacoma1.png">
+      </div>
+    </div>
 
     <div class="row">
       <div class="columns medium-6 large-6 medium-padding">
