--- a/app/about.html
+++ b/app/about.html
@@ -201,10 +201,7 @@
           </div>
           <div class="columns large-12">
             <div class="row">
-              <div class="columns small-1 large-1">
-                <h1 class="quote-mark">&ldquo;</h1>
-              </div>
-              <div class="columns small-11 large-11">
+              <div class="columns large-12">
                 <h3 class="quote"><a>An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
                 <h5>&mdash;Carl Safina, <a>National Geographic</a></h5>
               </div>
