--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body class="full-bg">
+  <body>
 
     <div class="row">
       <div class="columns small-4 large-6">
@@ -35,10 +35,37 @@
     </div>
 
     <div class="row">
-      <div class="columns large-12 medium-padding">
-        <h2>Design &amp; Development</h2>
+      <div class="columns large-12">
+        <h2 class="tagline">Design &amp; Development</h2>
       </div>
     </div>
+
+    <div class="row">
+      <div class="columns large-12">
+        <div class="menu-teaser">
+          <div class="row">
+            <div class="columns large-12">
+              <h3>&harr;</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row large-padding">
+    
+      <div class="columns large-6 small-padding">
+        <h5>Virginia Law Review</h5>
+        <h1 class="uva"><a>100 Years of Excellence</a></h1>
+      </div>
+
+      <div class="columns large-6">
+        <img src="images/uva7.jpg">
+      </div>
+    </div>
+
+
+
 
 
     <div class="row medium-padding">
@@ -61,7 +88,7 @@
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a>About</a></h3>
+                  <h3><a>Notes</a></h3>
                 </div>
               </div>
             </div>
@@ -76,7 +103,7 @@
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
-                  <h3><a>Notes</a></h3>
+                  <h3><a>About</a></h3>
                 </div>
               </div>
             </div>
