--- a/app/menu.html
+++ b/app/menu.html
@@ -49,7 +49,7 @@
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a href="/About.html">About</a></h3>
+                  <h3><a href="/About.html">Notes</a></h3>
                 </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
             <div class="menu-teaser">
               <div class="row">
                 <div class="columns large-12">
-                  <h3><a href="/notes.html">Notes</a></h3>
+                  <h3><a href="/notes.html">About</a></h3>
                 </div>
               </div>
             </div>
