updated home and  menu

--- a/app/index.html
+++ b/app/index.html
@@ -40,30 +40,25 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row small-padding">
       <div class="columns large-12">
-        <div class="menu-teaser">
-          <div class="row">
-            <div class="columns large-12">
-              <h3>&harr;</h3>
-            </div>
-          </div>
-        </div>
+        <img src="images/ocean.jpg">
       </div>
     </div>
 
+    <div class="row small-padding">
+      <div class="columns large-6 small-padding">
+        <h3>Virginia Law Review</h3>
+      </div>
+    </div>
+
+
     <div class="row large-padding">
-    
       <div class="columns large-6 small-padding">
         <h5>Virginia Law Review</h5>
         <h1 class="uva"><a>100 Years of Excellence</a></h1>
       </div>
-
-      <div class="columns large-6">
-        <img src="images/uva7.jpg">
-      </div>
     </div>
-
 
 
 
